# copier-template-test

./: README.md  README.md.jinja
project/: pyproject.toml
src/{{module_name}}/: something.py
{{project_name}}/: README.md.jinja  pyproject.toml  pyproject.toml.jinja
{{project_name}}/src/{{module_name}}/: {{module_name}}.py.jinja
